--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,10 @@ html {
   background-color: #28d;
 }
 
+.show{
+  background-color: rgba(255, 255, 255, 0.692);
+}
+
 .colorChange .navbar-brand {
   color: #fff;
 }
@@ -77,7 +81,7 @@ html {
   margin-top: 3rem; /*image*/
 }
 
-.typewriter h1 {
+.typewriter h1{
   width: 130%;
   padding-top: 2%;
   color: rgb(236, 14, 136);
@@ -86,7 +90,7 @@ html {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: 0.15px; /* Adjust as needed */
+  letter-spacing: -2.85px; /* Adjust as needed */
   animation: typing 3.5s steps(30), blink-caret 0.5s step-end infinite;
 }
 
