--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html {
   background-image: url("./images/bg4.png");
   background-repeat: repeat-y;
   background-size: cover;
+  scroll-behavior: smooth;
 }
 
 /* navbar */
